--- a/templates/hexa/css/whmcs.css
+++ b/templates/hexa/css/whmcs.css
@@ -2,7 +2,22 @@
 
 html {height: 100%;}
 body{font-family:'Open Sans', sans-serif;background: #6ed7fe url(img/whmcs-city-bg.jpg) no-repeat top center;}
-
+.border,.border tr,.border td
+{  
+    border: 1px solid #ccc;
+}
+.border
+{
+    width: 95%;
+}
+.border td:first-child
+{
+    width: 55%
+}
+.border td
+{
+    padding:10px!important;
+}
 h1,h2,h3,h4,h5,h6{font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;font-weight:normal;color:#666;}
 .alert-white{background-color: #fefefe;border-color: #e26148;border: 1px solid #e3e3e3;}
 .alert-danger{background-color:#ebeef2;}
@@ -303,30 +318,30 @@ input[type="submit"],input[type="button"]{font-family:FontAwesome;}
 /* RESPONSIVE ADJUSTMENTS */
 
 @media (max-width: 768px) {
-.left-sidebar{height:100%;min-height:100%;position:absolute;left:-280px;}
-.content{margin-left:0!important;padding:15px;}
-.left-sidebar,.content{-webkit-transition:300ms ease;-moz-transition:300ms ease;-o-transition:300ms ease;-ms-transition:300ms ease;transition:300ms ease;}
-.btn-nav-toggle{display:none;}
-.navbar .btn-nav-toggle-responsive{color:#fff;display:inline-block;margin-left:15px;}
+    .left-sidebar{height:100%;min-height:100%;position:absolute;left:-280px;}
+    .content{margin-left:0!important;padding:15px;}
+    .left-sidebar,.content{-webkit-transition:300ms ease;-moz-transition:300ms ease;-o-transition:300ms ease;-ms-transition:300ms ease;transition:300ms ease;}
+    .btn-nav-toggle{display:none;}
+    .navbar .btn-nav-toggle-responsive{color:#fff;display:inline-block;margin-left:15px;}
 }
 @media (min-width: 769px) {
-.navbar .btn-nav-toggle-responsive{display: none;}
+    .navbar .btn-nav-toggle-responsive{display: none;}
 } 
 @media (min-width: 1280px) {
-.navbar .btn-nav-toggle-responsive{display:none;}
+    .navbar .btn-nav-toggle-responsive{display:none;}
 }
 @media (max-width: 767px) {
-.mail-pagination{margin-top:30px;}
-.mails{margin-top:60px;}
-.right-sidebar{display:none;}
+    .mail-pagination{margin-top:30px;}
+    .mails{margin-top:60px;}
+    .right-sidebar{display:none;}
 }
 @media max-width 480px {
-#pwstrengthbox{display:block;margin:10px auto 0;}
+    #pwstrengthbox{display:block;margin:10px auto 0;}
 }
 
 
 /* jazz*/
-	.info-aa { display: none; }
+.info-aa { display: none; }
 @media only screen and (max-width: 959px) {
-	.info-aa { display: block; }
+    .info-aa { display: block; }
 }
