--- a/templates/orderforms/modern/uff/css/custom.css
+++ b/templates/orderforms/modern/uff/css/custom.css
@@ -9,81 +9,82 @@ input , select { outline: none; }
 .tl {text-align: left !important;}
 
 body {
-  background-image: url(bg.jpg);
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  background-size: cover;
-  background-color: #000;
-  color: #fff;
+    background:#6ed7fe url(/templates/hexa/css/img/whmcs-city-bg.jpg) no-repeat top center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-color: #000;
+    font-weight: normal;
+    color: #666;
 }
 
 .nav-control {
-  background-color: rgba(0, 0, 0, 0.6);
-  margin-bottom: 10px;
+    background-color: white;
+    margin-bottom: 10px;
 }
 
 .nav-control > ul > li {
-  float: left;
-  width: 50%;
-  display: inline-block;
+    float: left;
+    width: 50%;
+    display: inline-block;
 }
 
 .nav-control > ul > li > a {
-  background: #ecf0f1;
-  padding: 10px;
-  display: block;
-  text-align: center;
-  color: #000000;
-  text-decoration: none;
+    background: #ecf0f1;
+    padding: 10px;
+    display: block;
+    text-align: center;
+    color: #000000;
+    text-decoration: none;
 }
 
 .nav-control > ul > li > a:hover {
-  background: #3498db;
-  color: #ffffff;
+    background: #3498db;
+    color: #ffffff;
 }
 
 .nav-control > ul > li > a.active {
-  background: #2980b9;
-  color: #ffffff;
+    background: #2980b9;
+    color: #ffffff;
 }
 
 .form-container {
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 20px;
+    background-color: white;
+    padding: 20px;
 }
 
 body > .container {
-  width: 960px;
-  padding-top: 5%;
-  margin: 0 auto;
+    width: 960px;
+    padding-top: 5%;
+    margin: 0 auto;
 }
 
 /** Customizing the EM Select **/
 .jquery-em-interactive-container {
-  color: #3498db;
+    color: #3498db;
 }
 
 /** Make a smooth display with Story Box, we're going to add this **/
 [data-sb] {
-  opacity: 0;
+    opacity: 0;
 }
 
 /** The Sliding Container can have a few quirks, it is suggested we always use a width for each div **/
 .uff-form-sliding > div.sliding-container > div {
-  width: 583px;
+    width: 583px;
 }
 
 .pager > li > a {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .pager > li.right {
-  float: right;
-  display: block;
+    float: right;
+    display: block;
 }
 
 
 .pager > li.left {
-  float: left;
-  display: block;
+    float: left;
+    display: block;
 }
