Ben change (again)

--- a/admin/templates/ra/style.css
+++ b/admin/templates/ra/style.css
@@ -178,7 +178,7 @@ select {
 	width: auto;
 }
 #sidebar a {
-/*	color: #FFFFFF; */
+	color: #FFFFFF; 
 	text-decoration:none;
 }
 #sidebar .smallfont {
