--- a/templates/orderforms/modern/uff/css/custom.css
+++ b/templates/orderforms/modern/uff/css/custom.css
@@ -13,7 +13,7 @@ body {
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
-    background-color: #000;
+    /*background-color: #000;*/
     font-weight: normal;
     color: #666;
 }
@@ -102,7 +102,7 @@ body > .container {
 {
     padding: 10px;
     font-size: 15px;
-
+    color: white;
 }
 .address-container
 {
@@ -122,4 +122,59 @@ body > .container {
     float: right;
     cursor: pointer;
 
+}
+.datalabel{
+    padding: 10px 10px 10px 0px;
+}
+.intalldate{
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #f5f5f5;
+}
+.right-sum,.addons
+{
+    margin-top: 10px;
+}
+
+.addondescription
+{
+    font-size: 14px;
+    font-weight: normal;
+}
+.button-right{
+    float:right;
+}
+.hidden-option{
+    display: none;
+}
+.cart-sumary-title
+{
+    font-weight: bold;
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+}
+.right
+{
+    float:right;
+}
+.cart-default
+{
+    background: transparent;
+    border:2px solid white;
+    color:white;
+    width: 100%;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: Arial;
+}
+.cart-default:hover
+{
+    color: white;
+    background: #286090;
+}
+.cancel{
+    color: #bcc2e7;
+     border-color: #bcc2e7;
+    
 }
