--- a/admin/templates/ra/css/main.css
+++ b/admin/templates/ra/css/main.css
@@ -4181,7 +4181,7 @@ table.tablesorter thead tr th:hover {
         padding: 4px 10px 4px 25px;
         border: 2px solid #fff;
         width: 130px;
-       // background-image: url('../../images/icons/search.png');
+       /* background-image: url('../../images/icons/search.png');*/
         background-repeat: no-repeat;
         background-position: 5px 4px;
         -moz-border-radius: 5px;
@@ -4857,7 +4857,7 @@ table.tablesorter thead tr th:hover {
         display: none;
     }
     #prerepliescontainer #predefq {images
-       // background-image: url("../../../images/icons/search.png");
+       /* background-image: url("../../../images/icons/search.png"); */
         background-position: 5px 3px;
         background-repeat: no-repeat;
         margin: 0;
