peter changes (autoscript, please check if files need to be added)

--- a/admin/templates/ra/css/style.css
+++ b/admin/templates/ra/css/style.css
@@ -9,6 +9,14 @@ and open the template in the editor.
 */
 
 .customefield{
-    
     padding:15px;
+}
+
+.textgreen{
+    color: green;
+}
+
+.textred
+{
+    color:red;
 }
