--- a/admin/templates/ra/css/main.css
+++ b/admin/templates/ra/css/main.css
@@ -4159,19 +4159,19 @@ table.tablesorter thead tr th:hover {
        INTELLIGENT SEARCH
     -------------------------------------------------------------- */
 
-/*    .intellisearch {
-        position: absolute;
-        top: 0;
-        right: 0;
-        margin: 48px 20px;
-        text-align: right;
-    } */
+    /*    .intellisearch {
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: 48px 20px;
+            text-align: right;
+        } */
     .intellisearch #intellisearchval {
         margin: 0;
         padding: 4px 10px 4px 25px;
         border: 2px solid #fff;
         width: 130px;
-       /* background-image: url('../../images/icons/search.png');*/
+        /* background-image: url('../../images/icons/search.png');*/
         background-repeat: no-repeat;
         background-position: 5px 4px;
         -moz-border-radius: 5px;
@@ -4191,8 +4191,8 @@ table.tablesorter thead tr th:hover {
     #searchresults {
         display: none;
         position: absolute;
-        top: 82px;
-        right: 0;
+        top: 44px;
+        right: 0px;
         width: 450px;
         margin: 0;
         padding: 3px;
@@ -4797,12 +4797,12 @@ table.tablesorter thead tr th:hover {
         display: none;
     }
     #prerepliescontainer #predefq {images
-       /* background-image: url("../../../images/icons/search.png"); */
-        background-position: 5px 3px;
-        background-repeat: no-repeat;
-        margin: 0;
-        padding: 2px 2px 2px 25px;
-        border: 1px solid #ccc;
+                                   /* background-image: url("../../../images/icons/search.png"); */
+                                   background-position: 5px 3px;
+                                   background-repeat: no-repeat;
+                                   margin: 0;
+                                   padding: 2px 2px 2px 25px;
+                                   border: 1px solid #ccc;
     }
     #prerepliescontainer .box {
         margin: 10px auto;
