update invoice template

--- a/admin/templates/ra/css/style.css
+++ b/admin/templates/ra/css/style.css
@@ -33,3 +33,10 @@ and open the template in the editor.
     padding-top: 8px;
 
 }
+.tableitem{
+    margin-right: 5px;
+    display: inline; 
+}
+.table td{
+    vertical-align: middle!important;
+}
