--- a/templates/uihex/css/whmcs.css
+++ b/templates/uihex/css/whmcs.css
@@ -1,7 +1,7 @@
 /* GENERAL */
 
 html {height: 100%;}
-body{font-family:'Open Sans', sans-serif;background: #6ed7fe url(img/whmcs-city-bg.jpg) no-repeat top center;}
+body{font-family:'Open Sans', sans-serif;background: #6ed7fe ;}
 .border,.border tr
 {  
     border: 1px solid #ccc;
