--- a/admin/templates/ra/css/main.css
+++ b/admin/templates/ra/css/main.css
@@ -4727,8 +4727,8 @@ table.tablesorter thead tr th:hover {
         border-left: 1px solid #e5e5e5;
         min-height: 150px;
     }
-    
-     #notes .reply .leftcol, #notes .staffreply .leftcol {
+
+    #notes .reply .leftcol, #notes .staffreply .leftcol {
         float: left;
         width: 125px;
         padding: 10px;
@@ -4764,7 +4764,7 @@ table.tablesorter thead tr th:hover {
     }
     #notes .postedon 
     {color: #999;
-        
+
     }
     #ticketreplies .quoteicon {
         float: right;
@@ -5005,7 +5005,7 @@ table.tablesorter thead tr th:hover {
         text-align: center;
     }
     .ordersummaryleftcol {
-       
+
     }
     #ordersummary {
         margin: 20px 5px 0 20px;
@@ -5019,6 +5019,10 @@ table.tablesorter thead tr th:hover {
         -webkit-box-shadow: 0px 0px 20px #ccc;
         -o-box-shadow: 0px 0px 20px #ccc;
         box-shadow: 0px 0px 20px #ccc;
+    }
+    #ordersummary .item
+    {
+        background: white;
     }
     #ordersummary table {
         width: 100%;
