--- a/templates/uihex/css/ui-portal.css
+++ b/templates/uihex/css/ui-portal.css
@@ -56,6 +56,15 @@ body{font-family:'Roboto', sans-serif; font-size: 13px;}
 }
 .row.welcome .col-md-12 h3 strong {
     font-weight: 400;
+    text-transform: capitalize;
+}
+.row.welcome .col-md-12 h3 .cl-id {
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.4);
+    text-shadow: 2px 2px 5px rgba(28, 40, 82, 0.3);
+    font-size: 0.5em;
+    font-weight: 400;
+    margin-top: 1px;
 }
 .border,.border tr{  
     border: 1px solid #ccc;
@@ -111,10 +120,10 @@ hr{color:#ddd;border-color:#ddd;}
 [id*='customfield']{display:block;width:100%;height:34px;font-size:14px;line-height:1.42857143;color:#555;background-color:#fff;background-image:none;border:1px solid #ccc;border-radius:4px;-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075);box-shadow:inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition:border-color ease-in-out .15s, box-shadow ease-in-out .15s;transition:border-color ease-in-out .15s, box-shadow ease-in-out .15s;padding:6px 12px;}
 #stateselect{width:100%;height:34px;font-size:14px;border-radius:4px;vertical-align:middle;border:1px solid #ccc;color:#555;line-height:1.428571429;padding:6px 12px;}
 .nav-tabs {border: none}
-.nav-tabs > li{ margin-bottom: 0; margin-right: 1px}
+.nav-tabs > li{ margin-bottom: 0; margin-right: 1px; text-transform: uppercase;}
 .nav-tabs > li > a{border:none;}
-.nav-tabs.account > li > a{color: rgba(255, 255, 255, 0.6); border-radius: 7px 7px 0 0; margin: 0; min-height: 40px; text-align: center; background-color: rgb(97, 113, 149); padding: 10px 40px;}
-.nav-tabs.account > li.active > a{font-size: 1.1em; min-height: 46px; margin: -6px 0; padding: 12px 40px 8px; font-weight: 700; letter-spacing: 0.1em;}
+.nav-tabs.account > li > a{color: rgba(255, 255, 255, 0.6); border-radius: 7px 7px 0 0; margin: 0; min-height: 40px; text-align: center; background-color: rgb(97, 113, 149); padding: 13px 40px 7px; letter-spacing: 0.02em;}
+.nav-tabs.account > li.active > a{font-size: 1em; margin: -6px 0; padding: 13px 40px 11px; font-weight: 700;}
 #tabs{margin-bottom:10px;}
 .item-title{color:#000;}
 label,dt{font-weight:400;}
@@ -128,6 +137,12 @@ div.adminreturndiv{
     top: 0;
     position: fixed;
     background-color: #1c2852!important;
+}
+.nav-tabs.account > li > a i.fa {
+    margin: 0;
+    padding: 0 8px 0 0;
+    font-size: 1.5em;
+    font-weight: 100;
 }
 .logo-page a{text-decoration:none;}
 .info-details h4{font-size:14px;}
@@ -516,8 +531,11 @@ ul.info-list{margin-top:20px;}
     padding: 8px 0;
     margin: 15px 0;
     letter-spacing: 0.1em;
+    max-height: 32px;
 }
-
+.info-box.bg-info.text-white .footcont .action .col-md-6 a:hover {
+    box-shadow: 0 5px 15px -1px rgba(0,0,0,0.2);
+}
 .info-box.bg-info.text-white.supportticket .footcont .action .col-md-6:nth-of-type(1) a{color: #ef4160;border-color: #ef4160;}
 .info-box.bg-info.text-white.activeservice .footcont .action .col-md-6:nth-of-type(1) a{color: #e48c3c; border-color: #e48c3c;}
 .info-box.bg-info.text-white.invoicesdue .footcont .action .col-md-6:nth-of-type(1) a{color: #53bb71;border-color: #53bb71;}
@@ -526,6 +544,9 @@ ul.info-list{margin-top:20px;}
 .info-box.bg-info.text-white .footcont .action .col-md-6:nth-of-type(2) a {
     background-color: #fff;
     box-shadow: 0 5px 15px -1px rgba(0,0,0,0.3);
+}
+.info-box.bg-info.text-white .footcont .action .col-md-6:nth-of-type(2) a:hover {
+    box-shadow: 0 5px 15px -1px rgba(0,0,0,0.5);
 }
 .info-box.bg-info.text-white.supportticket .footcont .action .col-md-6:nth-of-type(2) a{background-color: #ef4160;border-color: #ef4160;}
 .info-box.bg-info.text-white.activeservice .footcont .action .col-md-6:nth-of-type(2) a{background-color: #e48c3c; border-color: #e48c3c;}
@@ -706,8 +727,6 @@ p.rtncl a {color: #1c2852;}
     color: #1c2852;
 }
 
-
-
 .site-holder .content>.row>.col-md-12>div>.nav-tabs{
     border: none;
     display: table;
@@ -716,15 +735,16 @@ p.rtncl a {color: #1c2852;}
 }
 
 .account-wrap {
-    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 .row.details {
     background: #fff;
     border-radius: 0 7px 7px 7px;
-    padding: 20px 10px;
+    padding: 50px 10px 20px;
 }
 .row.details>div {overflow: auto;}
 .row.account .col-lg-6 select.form-control {
@@ -734,34 +754,37 @@ p.rtncl a {color: #1c2852;}
     overflow: auto;
     margin-bottom: 10px;
 }
-p.invdesc, p.invnum {
+p.tbldesc, p.tblnum {
     font-size: 11px;
     float:left;
     margin-bottom: 10px;
 }
-p.invnum {
+p.tblnum {
     float:right;
+}
+
+.col-lg-4>.form-group {
+    margin-top: 15px;
+    padding-left: 20px;
 }
 .col-lg-4>.form-group>label {
     font-size: 0.85em;
     text-transform: uppercase;
     font-weight: 700;
     color: rgba(28, 40, 69, 0.48);
-    padding-left: 20px;
 }
-.col-lg-4>.form-group>input {
-    font-size: 1.1em;
-    margin: 0;
-    text-transform: capitalize;
-    color: #1c2852;
+.col-lg-4>.form-group>input, .form-control {
+    font-size: 1.2em;
     box-shadow: none;
-    border: 1px solid rgb(243, 243, 243);
-    background: rgb(243, 243, 243);
-    letter-spacing: 0.02em;
+    border: 0;
     height: auto;
     line-height: 1em;
-    padding-left: 20px;
+    border-radius: 0;
+    text-transform: capitalize;
     font-weight: 400;
+    color: #1c2852;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    letter-spacing: 0.02em;
 }
 .row.details>div.table-wrap {
     margin: 0 20px;
@@ -773,16 +796,18 @@ p.invnum {
     background-color: #6e92cb;
     color: white;
 }
-.form-control {
-    border-radius: 26px;
+.form-control:hover, .form-control:active, .form-control:focus {
+    box-shadow: none;
+}
+.form-control option:hover {
+    background-color: rgb(110, 146, 203);
+    border-color: rgb(110, 146, 203);
 }
 .col-lg-4>.form-group>input#email {
     text-transform: inherit;
 }
 
-.col-lg-4>.form-group {
-    margin-top: 15px;
-}
+
 .row.details>div.btn-toolbar {
     margin-top: 20px;
     text-align: center;
