--- a/templates/nginx-default.j2
+++ b/templates/nginx-default.j2
@@ -10,7 +10,7 @@ server {
   location / {
     # First attempt to serve request as file, then
     # as directory, then fall back to index.html
-    try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ =404;
   }
 
   location /doc/ {
