Move back to /var/www/html; add copy-only shell provisioner

--- a/templates/nginx-default.j2
+++ b/templates/nginx-default.j2
@@ -1,7 +1,7 @@
 server {
   listen 80;
 
-  root /vagrant/html;
+  root /var/www/html;
   index index.php index.html index.htm;
 
   # Make site accessible from any domain
