Changing admin location is standard security practice. Also fix up invalid sidebar hrefs

--- a/html/admin/templates/ra_flat/css/style.css
+++ b/html/admin/templates/ra_flat/css/style.css
@@ -176,7 +176,7 @@ body{
     width: 130vw;
     height: 150vh;
     margin: -20vmin;
-    background-image: url(/admin/images/bg.jpg);
+    background-image: url(images/bg.jpg);
     background-size: 100% 100%;
     filter: blur(30px);
 }
