--- a/templates/configuration.php.j2
+++ b/templates/configuration.php.j2
@@ -12,5 +12,6 @@
     $cc_encryption_hash = 'DONOTUSEINPRODUCTION';
     $templates_compiledir = 'templates_c/';
     $mysql_charset = 'utf8';
+    $customadminpath = "admin";
 // vim: ai ts=2 sts=2 et sw=4 ft=php
 ?>
