--- a/templates/nginx-default.j2
+++ b/templates/nginx-default.j2
@@ -13,6 +13,13 @@ server {
     try_files $uri $uri/ =404;
   }
 
+  location /maildev/ {
+    rewrite /maildev(/.*) $1 break;
+    proxy_pass http://127.0.0.1:1080;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+  }
+
   location /doc/ {
     alias /usr/share/doc/;
     autoindex on;
