Integrate memcached for config caching

--- a/templates/configuration.php.j2
+++ b/templates/configuration.php.j2
@@ -13,6 +13,7 @@
     $templates_compiledir = '/tmp/templates_c/';
     $mysql_charset = 'utf8';
     $customadminpath = "admin";
+    $memcacheservers = [ [ "host"=>"localhost","port"=>11211 ] ]
 
 // vim: ai ts=2 sts=2 et sw=4 ft=php
 ?>
