--- a/html/admin/templates/ra_flat/assets/css/amaze.css
+++ b/html/admin/templates/ra_flat/assets/css/amaze.css
@@ -5103,7 +5103,7 @@ a.dropdown-toggle[aria-expanded="true"] .caret {
     color: #364150;
     font-size: 14px;
     padding: 7px 18px;
-    height: 40px;
+/*    height: 20px; */
     -webkit-box-shadow: none;
     box-shadow: none; }
 .form-control:focus {
@@ -5635,7 +5635,7 @@ star {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-    padding: 12px 11px;
+/*    padding: 12px 11px; */
     vertical-align: middle; }
 .table .th-description {
     max-width: 150px; }
