--- a/templates/nginx-default.j2
+++ b/templates/nginx-default.j2
@@ -17,6 +17,13 @@ server {
     try_files $uri $uri/ =404;
   }
 
+  location /bower_components {
+    # Enable compression of bower components
+    # gzip-safe
+    gzip on;
+    gzip_types text/html text/css application/javascript text/javascript;
+  }
+
   location /maildev/ {
     rewrite /maildev(/.*) $1 break;
     proxy_pass http://127.0.0.1:1080;
@@ -74,4 +81,3 @@ server {
   }
   ### phpMyAdmin ###
 }
-
