--- a/templates/nginx-default.j2
+++ b/templates/nginx-default.j2
@@ -5,8 +5,8 @@ server {
   root /var/www/html;
   index index.php index.html index.htm;
 
-  ssl_certificate /etc/nginx/selfsign_cert.pem;
-  ssl_certificate_key /etc/nginx/selfsign_key.pem;
+  ssl_certificate {{ssl_cert}};
+  ssl_certificate_key {{ssl_key}};
 
   # Make site accessible from any domain
   server_name _;
